--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <google.gson.version>2.8.5</google.gson.version>
         <assertj.version>3.4.1</assertj.version>
         <checkstyle.version>3.1.1</checkstyle.version>
+        <maven.site.version>3.9.0</maven.site.version>
+        <maven.projects.reports.version>3.0.0</maven.projects.reports.version>
+        <cluecumber.version>2.5.0</cluecumber.version>
     </properties>
 
     <dependencies>
@@ -60,6 +63,12 @@
             <artifactId>maven-checkstyle-plugin</artifactId>
             <version>${checkstyle.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.trivago.rta</groupId>
+            <artifactId>cluecumber-report-plugin</artifactId>
+            <version>${cluecumber.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -84,13 +93,32 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.9.0</version>
+                <version>${maven.site.version}</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>${maven.projects.reports.version}</version>
+            </plugin>
+
+            <plugin>
+                <groupId>com.trivago.rta</groupId>
+                <artifactId>cluecumber-report-plugin</artifactId>
+                <version>${cluecumber.version}</version>
+                <executions>
+                    <execution>
+                        <id>report</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>reporting</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sourceJsonReportDirectory>${project.build.directory}/cucumber-report</sourceJsonReportDirectory>
+                    <generatedHtmlReportDirectory>${project.build.directory}/generated-report</generatedHtmlReportDirectory>
+                </configuration>
             </plugin>
 
         </plugins>
